BCT 0.3.3

- Fix small bug in latmio_und_connected causing failure for sparse matrices
- Add non-networkx dependent algorithm to get_components (but less efficient)

BCT 0.3.2

- Change several functions including threshold_proportional and binarize to
    have copy=True as default argument
- Fix bug in threshold_proportional where copying behavior did not work for
    symmetric matrices.
- Fix minor quirk in threshold_proportional where np.round rounds to nearest
    even number (optimizes floating point) which is discrepant with BCT
- Add a test suite with some functions
- Fix typo in rich_club_bu
- Refactor x[range(n),range(n)] to np.fill_diagonal
- Fix off-by-one bug in moduality_[prob/fine]tune_und_sign

BCT 0.3.1

- Fix bug in NBS
- Fix series of bugs in null_models

BCT 0.3

- Added NBS
- Added in all of the new functions from the Dec 2013 release of BCT
- Fixed numerous bugs having to do with indexing errors in modularity
- Fixed several odd bugs with clustering_coef, efficiency, distance 

For the next release, I clearly need a real test suite.