@@ -2,6 +2,7 @@ BCT 0.3.3
 
 - Fix small bug in latmio_und_connected causing failure for sparse matrices
 - Add non-networkx dependent algorithm to get_components (but less efficient)
+- Add an implementation of consensus clustering and fix bug in agreement
 
 BCT 0.3.2
 
